# MathInspector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  TODO.md  Vagrantfile  environment.yml  hithere.math  install.sh  mathinspector-0.9.3.dev6+g7016f1f-py3-none-any.whl  mathinspector.linux.spec  mathinspector.macos.spec  mathinspector.spec  mathinspector.win.spec  pyproject.toml  setup.cfg  test.py
.github/workflows/: test.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  private_key  synced_folders  vagrant_cwd
assets/: ABOUT.md  icons_3.icns  logo.xcf
assets/shader/: grid_frag.old.glsl  shader.py
mathinspector/: __init__.py  __main__.py  _run.py  animation.py  app.py  config.py  examples.py  mainmenu.py  modules.py  objects.py  project.py  version.py
mathinspector/assets/: ABOUT.md
mathinspector/assets/shader/: __init__.py  grid_frag.glsl  grid_frag.old.glsl  grid_vert.glsl  point_vert.glsl  quad_frag.glsl  shader.py
mathinspector/console/: __init__.py  autocomplete.py  builtin_print.py  codeparser.py  console.py  history.py  interpreter.py  prompt.py
mathinspector/doc/: __init__.py  browser.py  doc.py  help.py  manual.py  regex.py  show_functiondoc.py  show_markdown.py  show_textfile.py  tags.py  textparser.py
mathinspector/node/: __init__.py  editor.py  entry.py  item.py  menu.py  output.py
mathinspector/plot/: __init__.py  config.py  example.py  fakeplot2d.py  plot2d.py  plot3d.py  shader.py  util.py
mathinspector/plot/shader/: grid_frag.glsl  line_frag.glsl  line_vert.glsl  point_frag.glsl  quad_frag.glsl  quad_vert.glsl
mathinspector/style/: __init__.py  arc.tcl  color.py  image.py  tags.py
mathinspector/style/ttkthemes/: __init__.py  _imgops.py  _tkinter.py  _widget.py  themed_style.py
mathinspector/style/ttkthemes/advanced/: pkgIndex.tcl
mathinspector/util/: __init__.py  animation.py  argspec.py  binop.py  builtin_lists.py  common.py  config.py  docscrape.py  excluded.py  numargs.py  savedata.py  vdict.py
mathinspector/widget/: __init__.py  button.py  menu.py  notebook.py  popup.py  text.py  treeview.py
pkg/: _app.py  build.py  mathinspector.linux.spec  mathinspector.macos.spec  mathinspector.win.spec  pyinst.py
src/: mathinspector.py  test.py
src/json/: README.md  s.py
src/json2/: l.py  yo
src/objects/: __init__.py  complex_grid.py
src/settings/: __init__.py  settings.json
src/style/: __init__.py  markdown.py  syntax.py  tags.py  theme.py
src/ttkthemes/: _utils.py  themed_tk.py
src/ttkthemes/advanced/: pkgIndex_package.tcl
src/ttkthemes/gif/: pkgIndex.tcl
src/ttkthemes/gif/arc/: arc.tcl
src/ttkthemes/gif/equilux/: equilux.tcl
src/ttkthemes/gif/scid/: LICENSE.md  README.md  scid.tcl
src/ttkthemes/gif/ubuntu/: LICENSE.md
src/ttkthemes/png/: pkgIndex.tcl
src/ttkthemes/png/arc/: arc.tcl
src/ttkthemes/png/equilux/: equilux.tcl
src/ttkthemes/png/scid/: scid.tcl
src/ttkthemes/themes/: pkgIndex.tcl
src/ttkthemes/themes/aquativo/: CreateImageLib.def  ImageLib.tcl
src/ttkthemes/themes/black/: LICENSE  black.tcl
src/ttkthemes/themes/blue/: blue.tcl  pkgIndex.tcl
src/ttkthemes/themes/clearlooks/: clearlooks.tcl  pkgIndex.tcl
src/ttkthemes/themes/elegance/: LICENSE
src/ttkthemes/themes/itft1/: itft1.tcl
src/ttkthemes/themes/keramik/: pkgIndex.tcl
src/util/: __init__.py  animate.py  argcount.py  argspec.py  docscrape.py  icons.py  misc.py  objectcontainer.py  projectdata.py  savedata.py  watchhandle.py
src/view/: __init__.py  console.py  docviewer.py  editor.py  menu.py  nav.py  objecttree.py  output.py  projecttree.py  workspace.py
src/widget/: __init__.py  button.py  contextmenu.py  editortab.py  infobox.py  navicon.py  notebook.py  notebooktab.py  popup.py  sciplot.py  text.py  treeentry.py  treeview.py
src/widget/canvas/: __init__.py  element.py  entry.py  item.py  panzoomdragcanvas.py
src/widget/text/: __init__.py  blinkingcursor.py  highlightedtext.py  linenumbers.py  texteditor.old.multiselect.py  texteditor.py
(+25 files in other folders)
