[metadata]
name=mathinspector
description=A visual programing environment for scientific computing with Python
long_description=file: README.md
long_description_content_type=text/markdown
license=MPL 2.0
license_file=LICENSE
url=https://mathinspector.com
project_urls=
    Repository=https://github.com/MathInspector/MathInspector
    Changelog=https://github.com/MathInspector/MathInspector/releases
author=Matt Calhoun
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
platforms=any
provides=mathinspector
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
[options]
install_requires=
    cloudpickle
    numpy
    pillow
    pygame
    pyglm
    PyOpenGL
    PyOpenGL_accelerate
    setuptools
    scikit-image
    scipy
    ttkthemes
    watchdog
packages=find:
python_requires=>=3.6
[options.entry_points]
console_scripts=
    mathinspector=mathinspector:main
[options.package_data]
mathinspector=assets/*, assets/*/*
