[metadata]
name=mathinspector
description=A visual programing environment for scientific computing with Python
long_description=file: README.md
long_description_content_type=text/markdown
license=GPL 3.0+
license_file=LICENSE
url=https://mathinspector.com
project_urls=
    Repository=https://github.com/MathInspector/MathInspector
    Changelog=https://github.com/MathInspector/MathInspector/releases
author=Matt Calhoun
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=python, animation, mathinspector, math
platforms=any
provides=mathinspector
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Documentation
    Topic :: Education
    Topic :: Games/Entertainment :: Simulation
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Text Processing :: Markup
[options]
install_requires=
    cloudpickle
    numpy
    pillow
    pygame
    pyglm
    PyOpenGL
    PyOpenGL_accelerate
    setuptools
    scikit-image
    scipy
    ttkthemes
    watchdog
packages=find:
python_requires=>=3.6
[options.entry_points]
console_scripts=
    mathinspector=mathinspector.app:main
[options.package_data]
mathinspector=assets/*, assets/*/*
